--- a/exp_QVM.ipynb
+++ b/exp_QVM.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from QVM import *\n",
+    "from Shadow_Tomography_QVM import *\n",
     "import numpy as np\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
